# hack/python-sdk/swagger.json
@@ -14,6 +14,46 @@
           "description": "MaxRestarts defines the limit on the number of JobSet restarts. A restart is achieved by recreating all active child jobs.",
           "type": "integer",
           "format": "int32"
+        },
+        "rules": {
+          "description": "List of failure policy rules for this JobSet. For a given Job failure, the rules will be evaluated in order, and only the first matching rule will be executed. If no matching rule is found, the RestartJobSet action is applied.",
+          "type": "array",
+          "items": {
+            "default": {},
+            "$ref": "#/definitions/jobset.v1alpha2.FailurePolicyRule"
+          }
+        }
+      }
+    },
+    "jobset.v1alpha2.FailurePolicyRule": {
+      "description": "FailurePolicyRule defines a FailurePolicyAction to be executed if a child job fails due to a reason listed in OnJobFailureReasons.",
+      "type": "object",
+      "required": [
+        "action",
+        "onJobFailureReasons"
+      ],
+      "properties": {
+        "action": {
+          "description": "The action to take if the rule is matched.",
+          "type": "string",
+          "default": ""
+        },
+        "onJobFailureReasons": {
+          "description": "The requirement on the job failure reasons. The requirement is satisfied if at least one reason matches the list. The rules are evaluated in order, and the first matching rule is executed. An empty list applies the rule to any job failure reason.",
+          "type": "array",
+          "items": {
+            "type": "string",
+            "default": ""
+          }
+        },
+        "targetReplicatedJobs": {
+          "description": "TargetReplicatedJobs are the names of the replicated jobs the operator applies to. An empty list will apply to all replicatedJobs.",
+          "type": "array",
+          "items": {
+            "type": "string",
+            "default": ""
+          },
+          "x-kubernetes-list-type": "atomic"
         }
       }
     },
@@ -147,6 +187,11 @@
         },
         "restarts": {
           "description": "Restarts tracks the number of times the JobSet has restarted (i.e. recreated in case of RecreateAll policy).",
+          "type": "integer",
+          "format": "int32"
+        },
+        "restartsCountTowardsMax": {
+          "description": "RestartsCountTowardsMax tracks the number of times the JobSet has restarted that counts towards the maximum allowed number of restarts.",
           "type": "integer",
           "format": "int32"
         }
